--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COACHTECH</title>
     <!-- 以下の内容を追加します -->
+    <link rel="stylesheet" href="css/reset3.css" />
     <link rel="stylesheet" href="css/style3.css" />
     <link rel="stylesheet" href="https://fonts.gstatic.com" />
     <link
@@ -18,7 +19,7 @@
       <div class="logo">
         <a href=""></a>
         <div class="img-estra">
-          <img src="img/estra_logo.png" alt="estra" width="200" height="50" />
+          <img src="img/estra_logo.png" alt="estra" width="200"height="50"/>
         </div>
         <!-- end.img-estra-->
       </div>
@@ -44,6 +45,7 @@
       <h4 class="main-title-sub2">
         Educational Technology Company<br />estra inc sice 2019
       </h4>
+      <!-- main画像右配置 -->
       <div class="main-img">
         <img src="img/firstview.jpg" alt="" />
       </div>
@@ -92,7 +94,7 @@
       </div>
       <!-- end.card-lave -->
       <p class="abut-tag-title-acticl">
-        株式会社estraはデジタル化が遅れている教育業界に<br />最新のテクノロジーを導入することによって教育の<br />DXを実現します。<br />独自のオベレーションとコーチングを融合した新しい<br />教育の仕組みにより、一人ひとりに合わせた最適な教<br />育を提供します。
+        株式会社estraはデジタル化が遅れている教育業界に<br />最新のテクノロジーを導入することによって教育の<br />DXを実現します。<br /><br/>独自のオベレーションとコーチングを融合した新しい<br />教育の仕組みにより、一人ひとりに合わせた最適な教<br />育を提供します。
       </p>
     </div>
     <!-- end.abou -->
@@ -102,7 +104,7 @@
       <h3 class="title">サービス内容</h3>
 
       <div class="servis-card">
-        <div class="card-img">
+        <div class="card-img-1">
           <img src="img/service__first.svg" alt="カード１" />
         </div>
         <!-- 1.card-img -->
@@ -111,14 +113,12 @@
           <p class="card-content">
             サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。
           </p>
-        </div>
-        <!-- 1.card-content1 -->
       </div>
       <!-- 1.servis-card1 -->
 
       <div class="servis-card">
-        <div class="card-img">
-          <img src="img/service__first.svg" alt="カード２" />
+        <div class="card-img-2">
+          <img src="img/service__first.svg" alt="カード2" />
         </div>
         <!-- 2.card-img -->
         <div class="card-content">
@@ -126,13 +126,11 @@
           <p class="card-content">
             サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。
           </p>
-        </div>
-        <!-- 2.card-content -->
       </div>
       <!-- 2.servis-card -->
 
       <div class="servis-card">
-        <div class="card-img">
+        <div class="card-img-3">
           <img src="img/service__first.svg" alt="カード３" />
         </div>
         <!-- end.card-img -->
@@ -257,16 +255,17 @@
       <!-- end.desc -->
     </div>
     <!-- end.company -->
-
+    <!--top.mv-->
+    <div class=""></div>
     <div class="mv">
       <div class="mv-2">
         <h2 class="title-1">採用情報</h2>
-        <h2 class="title-1">社員インタビュー</h2>
+        <h2 class="main-title-sub2">社員インタビュー</h2>
       </div>
     </div>
     <!-- end.mv -->
 
-    <p class="株式会社estraへのお問い合わせはこちらから"></p>
+    <p class="text">株式会社estraへのお問い合わせはこちらから</p>
 
     <form action="">
       <input type="submit" class="form-btn" value="お問い合わせ" />
