--- a/index3.html
+++ b/index3.html
@@ -27,7 +27,7 @@
       <!-- end.logo-->
       <nav class="header-nav">
         <ul class="header-nav-list">
-          <li class="header-nav-item"><a href="">News</a></li>
+          <li class="header-nav-item"><a href="index3.html">News</a></li>
           <li class="header-nav-item"><a href="">About</a></li>
           <li class="header-nav-item"><a href="">Service</a></li>
           <li class="header-nav-item"><a href="">Blog</a></li>
