--- a/index3.html
+++ b/index3.html
@@ -147,7 +147,7 @@
     </div>
     <!-- end.service -->
 
-    
+    <!--タイトルblog.プログ-->
     <p class="category-tag-blog">Blog</p>
     <h3 class="title-blog">プログ</h3>
     <!-- top.blog -->
@@ -277,6 +277,9 @@
         <p>お問い合わせ</p>
       </a>
     </div>
+    </div>
+    <div class="last">
+    <small>Copyright &copy; estra, inc.All Rights Reserved.</small>
     </div>
   </body>
 </html>
